--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ plugins {
 }
 
 version = '1.0.0'
-group = 'com.pyding.ng' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'NoGrief 1.20.1'
+group = 'com.pyding.easy_tweaker' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'EasyTweaker 1.20.1'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -63,10 +63,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', 'ng'
+            property 'forge.enabledGameTestNamespaces', 'easy_tweaker'
 
             mods {
-                ng {
+                easy_tweaker {
                     source sourceSets.main
                 }
             }
@@ -79,10 +79,10 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'forge.enabledGameTestNamespaces', 'ng'
+            property 'forge.enabledGameTestNamespaces', 'easy_tweaker'
 
             mods {
-                ng {
+                easy_tweaker {
                     source sourceSets.main
                 }
             }
@@ -98,10 +98,10 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'forge.enabledGameTestNamespaces', 'ng'
+            property 'forge.enabledGameTestNamespaces', 'easy_tweaker'
 
             mods {
-                ng {
+                easy_tweaker {
                     source sourceSets.main
                 }
             }
@@ -115,10 +115,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'ng', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'easy_tweaker', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                ng {
+                easy_tweaker {
                     source sourceSets.main
                 }
             }
@@ -134,8 +134,8 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 mixin {
     println("Damn Deniel...")
 
-    add sourceSets.main, "ng.refmap.json"
-    config "ng.mixins.json"
+    add sourceSets.main, "easy_tweaker.refmap.json"
+    config "easy_tweaker.mixins.json"
 }
 
 repositories {
@@ -159,6 +159,8 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.20.1-47.1.44'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
+    compileOnly name: 'CraftTweaker-forge-1.20.1-14.0.59'
+
 }
 
 
@@ -174,7 +176,7 @@ jar {
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "examplemodsareus",
-                "MixinConfigs": "ng.mixins.json", // Конфигурации миксинов, через зяпятую если их несколько
+                "MixinConfigs": "easy_tweaker.mixins.json", // Конфигурации миксинов, через зяпятую если их несколько
                 "FMLCorePluginContainsFMLMod": "true",  // Не забываем указать эти два флага,
                 "ForceLoadAsMod": "true",               // чтобы Forge нормально загрузил и мод, и миксины
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
