--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -2,10 +2,10 @@ modLoader="javafml" #mandatory
 loaderVersion="[43,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 license="All rights reserved"
 [[mods]] #mandatory
-modId="ng" #mandatory
+modId="easy_tweaker" #mandatory
 version="${file.jarVersion}" #mandatory
-displayName="NoGrief" #mandatory
-logoFile="ng_logo.png" #optional
+displayName="EasyTweaker" #mandatory
+logoFile="easy_tweaker.png" #optional
 credits="Let's ballance everything" #optional
 authors="Pyding" #optional
 description='''
