-bro finally, switchable gui and everything works

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="All rights reserved"
 modId="easy_tweaker" #mandatory
 version="${file.jarVersion}" #mandatory
 displayName="EasyTweaker" #mandatory
-logoFile="easy_tweaker.png" #optional
+logoFile="recipe_manager.png" #optional
 credits="Let's ballance everything" #optional
 authors="Pyding" #optional
 description='''
