--- a/src/main/resources/easy_tweaker.mixins.json
+++ b/src/main/resources/easy_tweaker.mixins.json
@@ -3,9 +3,10 @@
   "minVersion": "0.8",
   "package": "com.pyding.easy_tweaker.mixin",
   "compatibilityLevel": "JAVA_17",
-  "refmap": "ng.refmap.json",
+  "refmap": "easy_tweaker.refmap.json",
   "verbose": true,
   "mixins": [
+    "SmitingMixing"
   ],
   "client": [
     "GuiScaleMixin"
